# dealio-service

./: license.md  pnpm-lock.yaml
apps/bakery/: .eslintrc.js  README.md  next.config.ts  package.json  tsconfig.json
apps/bakery-production/: package.json
apps/bakery-production/app/: globals.css  layout.tsx  manifest.json  page.tsx
apps/bakery-production/components/: BakerForm.tsx  BakerManager.tsx  BatchManager.tsx  CategoryManager.tsx  IngredientManager.tsx  RecipeManager.tsx  RestockDialog.tsx  TemplateManager.tsx  delete-modal-provider.tsx  providers.tsx
apps/bakery-production/hooks/: bakery.ts  categories.ts  members.ts  units.ts  use-bakery.ts  use-settings.ts
apps/bakery-production/lib/: authClient.ts  org-context.tsx  session.tsx  utils.ts
apps/bakery-production/types/: index.ts
apps/bakery/supabase/: config.toml
apps/bookshop/: next.config.mjs  package.json
apps/bookshop/app/: layout.tsx  page.tsx
apps/bookshop/components/: BundleCards.tsx  Cart.tsx  Footer.tsx  FrequentlyBoughtTogether.tsx  Navbar.tsx  ProductCard.tsx  ReviewSection.tsx
apps/bookshop/contexts/: auth.tsx  cart.tsx
apps/bookshop/data/: academicBooks.ts  bundles.ts  products.ts  reviews.ts
apps/finance/: .gitignore  package.json  tsconfig.json
apps/finance/actions/: approval.ts  auth.ts
apps/pos/: README.md  components.json  index.html  latest.json  package.json  vite.config.ts
apps/pos/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos/src-tauri/capabilities/: default.json  desktop.json
apps/pos/src-tauri/src/: lib.rs
apps/web/: package.json
(+304 files in other folders)
